--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,7 @@ table {
     align-items: stretch;
     background-color: peachpuff;
     height: 500px;
+    width: 1000px;
 }
 
 #hand {
@@ -157,6 +158,7 @@ table {
     justify-content: center;
     align-items: center;
     flex-basis: 1;
+    margin: 25px;
 }
 
 .tower {
@@ -167,32 +169,33 @@ table {
     flex-grow: 1;
     /*  Set flex reverse */
     flex-direction: column-reverse;
+    max-width: 33.33333333%;
     border: 1px dashed red;
-
 }
 
 .disc {
     height: 60px;
-    border: 1px solid #345;
+    width: 120px;
+    border: 2px solid #345;
     border-radius: 25%;
 }
 
 #disc1 {
-    width: 80px;
-    background-color: purple;
+    background-color: rgb(177, 0, 177);
+    width: 60px;
 }
 
 #disc2 {
-    width: 100px;
-    background-color: blue;
+    background-color: rgb(0, 192, 166);
+    width: 90px;
 }
 
 #disc3 {
+    background-color: rgb(114, 90, 201);
     width: 120px;
-    background-color: forestgreen;
 }
 
 #disc4 {
-    width: 140px;
-    background-color: yellow;
+    background-color: rgb(0, 140, 221);
+    width: 150px;
 }
