--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,6 @@ table {
 header {
     text-align: center;
     text-transform: capitalize;
-    font-weight: 600;
     margin: 25px 0;
 }
 
@@ -174,6 +173,10 @@ header {
     flex-grow: 1;
     /*  Set flex reverse */
     flex-direction: column-reverse;
+    background: url('../images/gameBGImage.jpg') no-repeat center center;
+    background-size: cover;
+    opacity: 0.8;
+    width: 200px;
     max-width: 33.33333333%;
     border: 1px solid rgb(75, 75, 75);
 }
@@ -183,28 +186,40 @@ header {
 }
 
 .disc {
-    height: 60px;
+    height: 55px;
     width: 120px;
     border: 2px solid #345;
     border-radius: 25%;
 }
 
+.noMove {
+    display: flex;
+    flex-basis: 1;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.795);
+    color: antiquewhite;
+    font-weight: lighter;
+    text-transform: capitalize;
+    padding: 15px;
+    border-radius: 10%;
+}
+
 #disc1 {
-    background-color: rgb(177, 0, 177);
-    width: 60px;
+    background-color: rgba(177, 0, 177, 0.6);
+    width: 80px;
 }
 
 #disc2 {
-    background-color: rgb(0, 192, 166);
-    width: 90px;
+    background-color: rgba(0, 192, 166, 0.6);
+    width: 110px;
 }
 
 #disc3 {
-    background-color: rgb(114, 90, 201);
-    width: 120px;
+    background-color: rgba(114, 90, 201, 0.6);
+    width: 140px;
 }
 
 #disc4 {
-    background-color: rgb(0, 140, 221);
-    width: 150px;
+    background-color: rgba(0, 140, 221, 0.6);
+    width: 180px;
 }
