--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ header {
 .disc {
     height: 55px;
     width: 120px;
-    border: 2px solid #345;
+    border: 2px solid rgb(12, 12, 12);
     border-radius: 25%;
 }
 
