--- a/css/style.css
+++ b/css/style.css
@@ -188,8 +188,9 @@ header {
 .disc {
     height: 55px;
     width: 120px;
-    border: 2px solid rgb(12, 12, 12);
+    border: 2px solid #222;
     border-radius: 25%;
+    box-shadow: 0 2px #222;
 }
 
 .noMove {
